# Robots-Exploradores-Autonomos-ROS1-Turtlebot-2

./: .gitignore  .readthedocs.yaml  Readme.md
doc-RobotsExploradores/source/: conf.py  index.rst  pkg_exploracion.rst  requirements.txt  squad_approach_control_action.rst  squad_autonomous_control_action.rst  squad_interfaz.rst  squad_object_detection_action.rst  squad_state_manager.rst  squad_station_manager_node.rst
doc-RobotsExploradores/source_v1/: conf.py  configuracion.rst  index.rst  introduccion.rst  pkg_exploracion.rst  squad_approach_control_action.rst  squad_object_detection_action.rst  squad_state_manager.rst  uso.rst
instalacion/: instalacion_vision.sh  vision_install.sh
m-explore/explore/src/: explore.cpp
squad_exploracion/: CMakeLists.txt  package.xml  package_old.xml
squad_exploracion/action/: ApproachControl.action  AutonomousControl.action  ObjectDetection.action
squad_exploracion/config/: config.yaml
squad_exploracion/launch/: exploracion.launch
squad_exploracion/msg/: DetectedObject.msg
squad_exploracion/src/: problemas.txt  squad_approach_control_action.py  squad_autonomous_control_action.py  squad_object_detection_action.py
squad_exploracion/src/old/: squad_object_detection_action.py  squad_object_detection_action_V2.py  squad_object_detection_action_V3.py  squad_object_detection_action_V3_MOD.py  squad_object_detection_action_V4_FuncionaYOLO8.py
squad_main/: CMakeLists.txt  package.xml
squad_main/config/: configGeneral.yaml
squad_main/launch/: main_gazebo.launch  main_gazebo_m.launch  main_real.launch  main_rosbags.launch  main_stage.launch
squad_main/src/: squad_interfaz.py  squad_state_manager.py
squad_navegacion/: CMakeLists.txt  package.xml
squad_navegacion/config/: gmapping_params.yaml  move_base_params.yaml
squad_navegacion/launch/: squad_move_base.launch  squad_navegacion.launch  squad_navegacion_real.launch  squad_slam.launch
squad_planificacion/: CMakeLists.txt  package.xml
squad_planificacion/msg/: StationInfo.msg  StationsInfo.msg
squad_planificacion/src/: squad_station_manager_node.py
squad_simulacion/: CMakeLists.txt  package.xml
squad_simulacion/launch/: multi_robot_sim.launch  spawn_single_turtlebot.launch  squad_entorno_simulacion.launch  squad_entorno_simulacion_multirobot.launch  squad_spawn_objects_simulacion.launch
squad_simulacion/robots/: kobuki_squad.launch.xml
squad_simulacion/worlds/: map_mio.world
(+23 files in other folders)
