<?xml version="1.0"?>
<package format="2">
  <name>squad_planificacion</name>
  <version>0.0.0</version>
  <description>The squad_planificacion package</description>

  <maintainer email="abel@todo.todo">abel</maintainer>
  <license>TODO</license>

  <!-- Dependencias de herramientas de construcción -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencias necesarias para construir el paquete -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Dependencias necesarias en tiempo de ejecución -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
